@@ -26,7 +26,9 @@
  * @requires (sun.arch.data.model == "64"  & os.maxMemory > 4g)
  * @summary BufferedInputStream calculates negative array size with large
  *          streams and mark
- * @run main/othervm -Xmx4G LargeCopyWithMark
+ * @run main/othervm -Xmx4G -Xlog:gc,gc+heap,gc+ergo+heap -XX:+CrashOnOutOfMemoryError
+                     -XX:+IgnoreUnrecognizedVMOptions -XX:+G1ExitOnExpansionFailure
+                     LargeCopyWithMark
  */
 
 import java.io.BufferedInputStream;
